--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "predeploy":"npm run build",
-    "deploy":"gh-pages -d dist",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
@@ -20,11 +20,16 @@
     "@mui/material": "^7.1.0",
     "@mui/styled-engine-sc": "^7.1.0",
     "@tailwindcss/vite": "^4.1.7",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.12.2",
+    "lucide-react": "^0.562.0",
+    "motion": "^12.23.26",
     "prop-types": "^15.8.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "styled-components": "^6.1.18"
+    "styled-components": "^6.1.18",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
@@ -37,6 +42,7 @@
     "gh-pages": "^6.3.0",
     "globals": "^16.0.0",
     "tailwindcss": "^4.1.7",
+    "tw-animate-css": "^1.4.0",
     "vite": "^6.3.5"
   }
 }
