--- a/src/projects.json
+++ b/src/projects.json
@@ -5,7 +5,7 @@
     "tech": ["Kotlin", "XML", "Android Studio"],
     "github": "https://github.com/LuckyBoy587/Music-Player-In-Kotlin",
     "live": "",
-    "image": "./music-player.png"
+    "image": "music-player.png"
   },
   {
     "title": "Chatbot with Keras",
@@ -13,7 +13,7 @@
     "tech": ["Python", "Keras", "TensorFlow", "NumPy"],
     "github": "https://github.com/LuckyBoy587/ChatBot-for-LMS",
     "live": "",
-    "image": "./chatbot.png"
+    "image": "chatbot.png"
   },
   {
     "title": "Code Tracker Hub",
@@ -21,7 +21,7 @@
     "tech": ["React", "REST API", "Selenium", "GraphQL"],
     "github": "https://github.com/LuckyBoy587/Code-Tracker-Hub",
     "live": "",
-    "image": "./code-tracker-hub.png"
+    "image": "code-tracker-hub.png"
   },
   {
     "title": "CarPoolingSystem",
@@ -29,7 +29,7 @@
     "tech": ["Spring Boot", "Spring Data JPA", "Java", "REST API"],
     "github": "https://github.com/LuckyBoy587/CarPoolingSystem",
     "live": "",
-    "image": "./car-pooling-system.png"
+    "image": "car-pooling-system.png"
   },
   {
     "title": "Chess-AI",
@@ -37,7 +37,7 @@
     "tech": ["Python", "Pygame", "Alpha-Beta Pruning", "Minimax Algorithm"],
     "github": "https://github.com/LuckyBoy587/Chess-Pygame",
     "live": "",
-    "image": "./chess-ai.png"
+    "image": "chess-ai.png"
   },
   {
     "title": "Tetris-Java",
@@ -45,7 +45,7 @@
     "tech": ["Java", "Swing", "Game Development", "Object-Oriented Programming"],
     "github": "https://github.com/LuckyBoy587/Tetris-Java",
     "live": "",
-    "image": "./tetris.png"
+    "image": "tetris.png"
   },
   {
     "title": "TODO-Web-App",
@@ -53,6 +53,6 @@
     "tech": ["ReactJS", "JavaScript", "CSS", "Web App"],
     "github": "https://github.com/LuckyBoy587/TODO-Web-App",
     "live": "https://luckyboy587.github.io/TODO-Web-App/",
-    "image": "./todo-web-app.png"
+    "image": "todo-web-app.png"
   }
 ]
