--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.12.2",
+    "gsap": "^3.14.2",
     "lucide-react": "^0.562.0",
-    "motion": "^12.23.26",
+    "motion": "^12.24.7",
     "prop-types": "^15.8.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
