Added filtering options to projects tab

--- a/src/projects.json
+++ b/src/projects.json
@@ -1,6 +1,7 @@
 [
   {
     "title": "Music Player App",
+    "category": "Mobile",
     "description": "A fully functional offline music player built using Kotlin and XML with media controls and playlist support.",
     "tech": ["Kotlin", "XML", "Android Studio"],
     "github": "https://github.com/LuckyBoy587/Music-Player-In-Kotlin",
@@ -9,6 +10,7 @@
   },
   {
     "title": "Chatbot with Keras",
+    "category": "AI/ML",
     "description": "A simple chatbot built using deep learning (Keras and TensorFlow) that handles basic queries.",
     "tech": ["Python", "Keras", "TensorFlow", "NumPy"],
     "github": "https://github.com/LuckyBoy587/ChatBot-for-LMS",
@@ -17,6 +19,7 @@
   },
   {
     "title": "Code Tracker Hub",
+    "category": "Web Dev",
     "description": "A centralized dashboard that integrates coding platform progress like LeetCode, GeeksForGeeks, and more, giving users an overview of their coding journey.",
     "tech": ["React", "REST API", "Selenium", "GraphQL"],
     "github": "https://github.com/LuckyBoy587/Code-Tracker-Hub",
@@ -25,6 +28,7 @@
   },
   {
     "title": "CarPoolingSystem",
+    "category": "Web Dev",
     "description": "A backend service for organizing carpool rides, enabling users to register, manage vehicles, and coordinate ride-sharing efficiently and securely.",
     "tech": ["Spring Boot", "Spring Data JPA", "Java", "REST API"],
     "github": "https://github.com/LuckyBoy587/CarPoolingSystem",
@@ -33,6 +37,7 @@
   },
   {
     "title": "Chess-AI",
+    "category": "AI/ML",
     "description": "A graphical chess game implemented using Pygame, featuring an AI opponent that utilizes alpha-beta pruning to evaluate possible moves and select the best one, providing interactive play against the computer with move validation and game logic.",
     "tech": ["Python", "Pygame", "Alpha-Beta Pruning", "Minimax Algorithm"],
     "github": "https://github.com/LuckyBoy587/Chess-Pygame",
@@ -41,6 +46,7 @@
   },
   {
     "title": "Tetris-Java",
+    "category": "Game Dev",
     "description": "A classic Tetris game implemented in Java, providing smooth gameplay, intuitive controls, and traditional Tetris mechanics. The project features a graphical interface for interactive play, score tracking, and increasing difficulty levels as the game progresses.",
     "tech": ["Java", "Swing", "Game Development", "Object-Oriented Programming"],
     "github": "https://github.com/LuckyBoy587/Tetris-Java",
@@ -49,6 +55,7 @@
   },
   {
     "title": "TODO-Web-App",
+    "category": "Web Dev",
     "description": "A web-based task management application that allows users to create, edit, and organize their to-do lists. The app provides functionalities such as adding new tasks, marking tasks as completed, editing existing items, and deleting tasks, offering a simple and interactive interface for personal productivity.",
     "tech": ["ReactJS", "JavaScript", "CSS", "Web App"],
     "github": "https://github.com/LuckyBoy587/TODO-Web-App",
@@ -57,6 +64,7 @@
   }, 
   {
     "title": "AI Coding Platform",
+    "category": "Web Dev",
     "description": "Built AI-Coding-Platform, an interactive web app for AI-enhanced coding challenges with real-time feedback and progress tracking",
     "tech": ["React", "Node.js", "Express", "Docker", "Heroku"],
     "github": "https://github.com/LuckyBoy587/AI-Coding-Platform",
@@ -65,6 +73,7 @@
   },
   {
     "title": "Leetcode Helper Extension",
+    "category": "Web Dev",
     "description": "Developed a Chrome extension that provides hints and solutions for Leetcode problems, enhancing user experience and learning efficiency.",
     "tech": ["JavaScript", "Chrome Extension API", "ReactJS"],
     "github": "https://github.com/LuckyBoy587/Leetcode-Helper-Extension",
